syntax = "proto3";

package tesseral.intermediate.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service IntermediateService {
  rpc ListSAMLOrganizations(ListSAMLOrganizationsRequest) returns (ListSAMLOrganizationsResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/saml-organizations"
      body: "*"
    };
  }

  rpc ListOIDCOrganizations(ListOIDCOrganizationsRequest) returns (ListOIDCOrganizationsResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/oidc-organizations"
      body: "*"
    };
  }

  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);

  rpc RedeemUserImpersonationToken(RedeemUserImpersonationTokenRequest) returns (RedeemUserImpersonationTokenResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/redeem-user-impersonation-token"
      body: "*"
    };
  }

  rpc CreateIntermediateSession(CreateIntermediateSessionRequest) returns (CreateIntermediateSessionResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/intermediate-session"
      body: "*"
    };
  }

  rpc Whoami(WhoamiRequest) returns (WhoamiResponse) {
    option (google.api.http) = {get: "/intermediate/v1/whoami"};
  }

  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/organizations"
      body: "*"
    };
  }

  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse) {
    option (google.api.http) = {get: "/intermediate/v1/organizations"};
  }

  rpc SetOrganization(SetOrganizationRequest) returns (SetOrganizationResponse) {
    option (google.api.http) = {post: "/intermediate/v1/set-organization"};
  }

  rpc ExchangeIntermediateSessionForSession(ExchangeIntermediateSessionForSessionRequest) returns (ExchangeIntermediateSessionForSessionResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/exchange-intermediate-session-for-session"
      body: "*"
    };
  }

  rpc ExchangeRelayedSessionTokenForSession(ExchangeRelayedSessionTokenForSessionRequest) returns (ExchangeRelayedSessionTokenForSessionResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/exchange-relayed-session-token-for-session"
      body: "*"
    };
  }

  rpc GetGithubOAuthRedirectURL(GetGithubOAuthRedirectURLRequest) returns (GetGithubOAuthRedirectURLResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/github-oauth-redirect-url"
      body: "*"
    };
  }

  rpc RedeemGithubOAuthCode(RedeemGithubOAuthCodeRequest) returns (RedeemGithubOAuthCodeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/redeem-github-oauth-code"
      body: "*"
    };
  }

  rpc GetGoogleOAuthRedirectURL(GetGoogleOAuthRedirectURLRequest) returns (GetGoogleOAuthRedirectURLResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/google-oauth-redirect-url"
      body: "*"
    };
  }

  rpc RedeemGoogleOAuthCode(RedeemGoogleOAuthCodeRequest) returns (RedeemGoogleOAuthCodeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/redeem-google-oauth-code"
      body: "*"
    };
  }

  rpc GetMicrosoftOAuthRedirectURL(GetMicrosoftOAuthRedirectURLRequest) returns (GetMicrosoftOAuthRedirectURLResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/microsoft-oauth-redirect-url"
      body: "*"
    };
  }

  rpc RedeemMicrosoftOAuthCode(RedeemMicrosoftOAuthCodeRequest) returns (RedeemMicrosoftOAuthCodeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/redeem-microsoft-oauth-code"
      body: "*"
    };
  }

  rpc IssueEmailVerificationChallenge(IssueEmailVerificationChallengeRequest) returns (IssueEmailVerificationChallengeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/issue-email-verification-challenge"
      body: "*"
    };
  }

  rpc VerifyEmailChallenge(VerifyEmailChallengeRequest) returns (VerifyEmailChallengeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/verify-email-challenge"
      body: "*"
    };
  }

  rpc RegisterPassword(RegisterPasswordRequest) returns (RegisterPasswordResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/register-password"
      body: "*"
    };
  }

  rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/verify-password"
      body: "*"
    };
  }

  rpc IssuePasswordResetCode(IssuePasswordResetCodeRequest) returns (IssuePasswordResetCodeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/issue-password-reset-code"
      body: "*"
    };
  }

  rpc VerifyPasswordResetCode(VerifyPasswordResetCodeRequest) returns (VerifyPasswordResetCodeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/verify-password-reset-code"
      body: "*"
    };
  }

  rpc GetPasskeyOptions(GetPasskeyOptionsRequest) returns (GetPasskeyOptionsResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/get-passkey-options"
      body: "*"
    };
  }

  rpc RegisterPasskey(RegisterPasskeyRequest) returns (RegisterPasskeyResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/register-passkey"
      body: "*"
    };
  }

  rpc IssuePasskeyChallenge(IssuePasskeyChallengeRequest) returns (IssuePasskeyChallengeResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/issue-passkey-challenge"
      body: "*"
    };
  }

  rpc VerifyPasskey(VerifyPasskeyRequest) returns (VerifyPasskeyResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/verify-passkey"
      body: "*"
    };
  }

  rpc GetAuthenticatorAppOptions(GetAuthenticatorAppOptionsRequest) returns (GetAuthenticatorAppOptionsResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/get-authenticator-app-options"
      body: "*"
    };
  }

  rpc RegisterAuthenticatorApp(RegisterAuthenticatorAppRequest) returns (RegisterAuthenticatorAppResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/register-authenticator-app"
      body: "*"
    };
  }

  rpc VerifyAuthenticatorApp(VerifyAuthenticatorAppRequest) returns (VerifyAuthenticatorAppResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/verify-authenticator-app"
      body: "*"
    };
  }

  rpc SetEmailAsPrimaryLoginFactor(SetEmailAsPrimaryLoginFactorRequest) returns (SetEmailAsPrimaryLoginFactorResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/set-email-as-primary-login-factor"
      body: "*"
    };
  }

  rpc SetPasswordAsPrimaryLoginFactor(SetPasswordAsPrimaryLoginFactorRequest) returns (SetPasswordAsPrimaryLoginFactorResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/set-password-as-primary-login-factor"
      body: "*"
    };
  }

  rpc ExchangeSessionForIntermediateSession(ExchangeSessionForIntermediateSessionRequest) returns (ExchangeSessionForIntermediateSessionResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/exchange-session-for-intermediate-session"
      body: "*"
    };
  }

  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
  rpc OnboardingCreateProjects(OnboardingCreateProjectsRequest) returns (OnboardingCreateProjectsResponse);
}

message IntermediateSession {
  string id = 1;
  string project_id = 2;
  string email = 3;
  bool email_verified = 4;
  string user_display_name = 16;
  string google_user_id = 5;
  string google_hosted_domain = 6;
  string microsoft_user_id = 7;
  string microsoft_tenant_id = 8;
  string github_user_id = 17;
  string organization_id = 9;
  bool password_verified = 10;
  bool authenticator_app_verified = 14;
  bool passkey_verified = 15;
  bool new_user_password_registered = 11;
  bool email_verification_challenge_registered = 12;
  PrimaryAuthFactor primary_auth_factor = 13;
}

message Session {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp expire_time = 4;
  google.protobuf.Timestamp last_active_time = 5;
  PrimaryAuthFactor primary_auth_factor = 6;
  bool revoked = 7;
  string project_id = 8;
  string organization_id = 9;
  string impersonator_email = 10;
}

enum PrimaryAuthFactor {
  PRIMARY_AUTH_FACTOR_UNSPECIFIED = 0;
  PRIMARY_AUTH_FACTOR_EMAIL = 1;
  PRIMARY_AUTH_FACTOR_PASSWORD = 5;
  PRIMARY_AUTH_FACTOR_GOOGLE = 2;
  PRIMARY_AUTH_FACTOR_MICROSOFT = 3;
  PRIMARY_AUTH_FACTOR_GITHUB = 4;
  PRIMARY_AUTH_FACTOR_SAML = 6;
}

message Settings {
  string id = 1;
  string project_id = 2;
  string project_display_name = 20;
  string project_email_send_from_domain = 21;
  string logo_url = 5;
  string primary_color = 7;
  bool detect_dark_mode_enabled = 8;
  string dark_mode_logo_url = 9;
  string dark_mode_primary_color = 10;
  string log_in_layout = 11;
  bool log_in_with_email = 12;
  bool log_in_with_google = 13;
  bool log_in_with_github = 23;
  bool log_in_with_microsoft = 14;
  bool log_in_with_password = 15;
  bool log_in_with_saml = 16;
  bool log_in_with_oidc = 24;
  string redirect_uri = 17;
  optional string after_login_redirect_uri = 18;
  optional string after_signup_redirect_uri = 19;
  bool auto_create_organizations = 22;
  bool self_serve_create_organizations = 25;
  bool self_serve_create_users = 26;
}

message CreateProjectRequest {
  string display_name = 1;
  string redirect_uri = 2;
}

message CreateProjectResponse {
  Project project = 1;
}

message OnboardingCreateProjectsRequest {
  string display_name = 1;
  string prod_url = 2;
  string dev_url = 3;
}

message OnboardingCreateProjectsResponse {
  string refresh_token = 1;
  string access_token = 2;
}

message CreateIntermediateSessionRequest {
  string relayed_session_state = 1;
  string redirect_uri = 2;
  bool return_relayed_session_token_as_query_param = 3;
}

message CreateIntermediateSessionResponse {
  string intermediate_session_secret_token = 1;
}

message WhoamiRequest {}

message WhoamiResponse {
  IntermediateSession intermediate_session = 1;
}

message CreateOrganizationRequest {
  string display_name = 1;
}

message CreateOrganizationResponse {
  string organization_id = 1;
}

message SetOrganizationRequest {
  string organization_id = 1;
}

message SetOrganizationResponse {}

message ExchangeIntermediateSessionForSessionRequest {}

message ExchangeIntermediateSessionForSessionResponse {
  string refresh_token = 1;
  string access_token = 2;
  bool new_user = 3;
  string relayed_session_token = 4;
  string redirect_uri = 5;
  bool return_relayed_session_token_as_query_param = 6;
}

message ExchangeRelayedSessionTokenForSessionRequest {
  string relayed_session_token = 1;
}

message ExchangeRelayedSessionTokenForSessionResponse {
  string refresh_token = 1;
  string access_token = 2;
  string relayed_session_state = 3;
}

message GetGithubOAuthRedirectURLRequest {
  string redirect_url = 1;
}

message GetGithubOAuthRedirectURLResponse {
  string url = 1;
}

message RedeemGithubOAuthCodeRequest {
  string code = 1;
  string state = 2;
  string redirect_url = 3;
}

message RedeemGithubOAuthCodeResponse {}

message GetGoogleOAuthRedirectURLRequest {
  string redirect_url = 1;
}

message GetGoogleOAuthRedirectURLResponse {
  string url = 1;
}

message RedeemGoogleOAuthCodeRequest {
  string code = 1;
  string state = 2;
  string redirect_url = 3;
}

message RedeemGoogleOAuthCodeResponse {}

message GetMicrosoftOAuthRedirectURLRequest {
  string redirect_url = 1;
}

message GetMicrosoftOAuthRedirectURLResponse {
  string url = 1;
}

message RedeemMicrosoftOAuthCodeRequest {
  string code = 1;
  string state = 2;
  string redirect_url = 3;
}

message RedeemMicrosoftOAuthCodeResponse {}

message Organization {
  string id = 1;
  string display_name = 2;
  bool log_in_with_email = 3;
  bool log_in_with_google = 4;
  bool log_in_with_microsoft = 5;
  bool log_in_with_github = 16;
  bool log_in_with_password = 6;
  bool log_in_with_saml = 7;
  bool log_in_with_oidc = 18;
  bool log_in_with_authenticator_app = 8;
  bool log_in_with_passkey = 9;
  bool require_mfa = 10;
  string primary_saml_connection_id = 11;
  string primary_oidc_connection_id = 17;
  bool user_exists = 12;
  bool user_has_password = 13;
  bool user_has_authenticator_app = 14;
  bool user_has_passkey = 15;
}

message Project {
  string id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  string display_name = 5;
  string vault_domain = 6;
}

message IssueEmailVerificationChallengeRequest {
  string email = 1;
}

message IssueEmailVerificationChallengeResponse {}

message ListOrganizationsRequest {}

message ListOrganizationsResponse {
  repeated Organization organizations = 1;
}

message ListSAMLOrganizationsRequest {
  string email = 1;
}

message ListSAMLOrganizationsResponse {
  repeated Organization organizations = 1;
}

message ListOIDCOrganizationsRequest {
  string email = 1;
}

message ListOIDCOrganizationsResponse {
  repeated Organization organizations = 1;
}

message VerifyEmailChallengeRequest {
  string code = 2;
}

message VerifyEmailChallengeResponse {}

message RegisterPasswordRequest {
  string password = 1;
}

message RegisterPasswordResponse {}

message VerifyPasswordRequest {
  string organization_id = 1;
  string password = 2;
  string email = 3;
}

message VerifyPasswordResponse {}

message IssuePasswordResetCodeRequest {}

message IssuePasswordResetCodeResponse {}

message VerifyPasswordResetCodeRequest {
  string password_reset_code = 1;
}

message VerifyPasswordResetCodeResponse {}

message GetSettingsRequest {}

message GetSettingsResponse {
  Settings settings = 1;
}

message RedeemUserImpersonationTokenRequest {
  string secret_user_impersonation_token = 1;
}

message RedeemUserImpersonationTokenResponse {
  string refresh_token = 1;
  string access_token = 2;
}

message GetAuthenticatorAppOptionsRequest {}

message GetAuthenticatorAppOptionsResponse {
  string otpauth_uri = 1;
}

message RegisterAuthenticatorAppRequest {
  string totp_code = 1;
}

message RegisterAuthenticatorAppResponse {
  repeated string recovery_codes = 1;
}

message VerifyAuthenticatorAppRequest {
  string totp_code = 1;
  string recovery_code = 2;
}

message VerifyAuthenticatorAppResponse {}

message GetPasskeyOptionsRequest {}

message GetPasskeyOptionsResponse {
  string rp_id = 1;
  string rp_name = 2;
  string user_id = 3;
  string user_display_name = 4;
}

message RegisterPasskeyRequest {
  string attestation_object = 1;
  string rp_id = 2;
}

message RegisterPasskeyResponse {}

message IssuePasskeyChallengeRequest {}

message IssuePasskeyChallengeResponse {
  string rp_id = 1;
  repeated bytes credential_ids = 2;
  bytes challenge = 3;
}

message VerifyPasskeyRequest {
  bytes credential_id = 1;
  string client_data_json = 2;
  string authenticator_data = 3;
  string signature = 4;
}

message VerifyPasskeyResponse {}

message SetEmailAsPrimaryLoginFactorRequest {}

message SetEmailAsPrimaryLoginFactorResponse {}

message SetPasswordAsPrimaryLoginFactorRequest {}

message SetPasswordAsPrimaryLoginFactorResponse {}

message ExchangeSessionForIntermediateSessionRequest {
  string refresh_token = 1;
}

message ExchangeSessionForIntermediateSessionResponse {
  string intermediate_session_secret_token = 1;
}

// Webhooks are used to notify your application of events in Tesseral.
message ProjectWebhookSettings {
  // The Webhook ID. Starts with `webhook_...`.
  string id = 1;

  // The Project this Webhook belongs to.
  string project_id = 2;

  // The URL to send the webhook to.
  string url = 3;

  // The secret token used to sign the webhook.
  string app_id = 4;

  // When the Webhook was created.
  google.protobuf.Timestamp create_time = 5;

  // When the Webhook was last updated.
  google.protobuf.Timestamp update_time = 6;
}

message User {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  optional bool owner = 5;
  string google_user_id = 6;
  string microsoft_user_id = 7;
  string github_user_id = 11;
  bool has_authenticator_app = 8;
  optional string display_name = 9;
  optional string profile_picture_url = 10;
}
